-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.2, 6.4.0, 6.5.0 FF
-
None
-
-
33818458e2 (qt/qtbase/6.3) 33818458e2 (qt/tqtc-qtbase/6.3), fd17eaca8 (dev), 21615e8df (tqtc/lts-6.2), 6cc1b01ac (6.5), fa510dab9 (6.4)
After https://codereview.qt-project.org/c/qt/qtbase/+/422249 web engine api tests fail with
QVariant: Provided metatype does not support destruction, copy and default construction
For example https://doc.qt.io/qt-6/qwebenginecertificateerror.html is qml foreign type without default constructor.
- resulted in
-
QTBUG-111598 Implement get/get_if for QVariant to make it nicer for non-default constructible types
-
- Closed
-