QVariant: do allow non-default-constructible types

So long as you only ask us to copy it. Copying is mandatory, though.

I'll firm up the warning in a later commit, which may not get cherry-
picked as far back.

Fixes: QTBUG-105140
Change-Id: I3859764fed084846bcb0fffd170432abf65dc197
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit df0085d3a28005e84eb7688cc2575a121ba322aa)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>